CGI para imprimir un gen como figura

--- a/Gene_draw.ipynb
+++ b/Gene_draw.ipynb
@@ -67,7 +67,7 @@
     "\n",
     "También se pueden modificar la forma del objeto. Por default se obtiene una caja, pero se puede cambiar a flecha usando *sigil=\"ARROW\"*.\n",
     "\n",
-    "Los colores se pueden cambiar, aquí ocupamos la libreria *color* que tiene colores predefinidos, pero también accepta hex color code (\"#ad42f5\""
+    "Los colores se pueden cambiar, aquí ocupamos la libreria *color* que tiene colores predefinidos, pero también accepta hex color code (\"#ad42f5\")."
    ]
   },
   {
@@ -98,6 +98,13 @@
     "# Flecha roja\n",
     "feature = SeqFeature(FeatureLocation(275, 375), strand=-1)\n",
     "gds_features.add_feature(feature, name=\"Reverse\",sigil=\"ARROW\", label=True, color = \"#ad42f5\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Al final se grafica y se obtiene un png"
    ]
   },
   {
